[package]
name = "locks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
check-loom = ["loom"]

[dependencies]
arr_macro = "0.1.3"
cfg-if = "1.0.0"
crossbeam-channel = "0.5.6"
crossbeam-epoch = "0.9.10"
crossbeam-utils = "0.8.11"
ctrlc = "3.2.3"
either = "1.7.0"
itertools = "0.10.3"
once_cell = "1.13.1"
loom = { version = "0.5.6", optional = true }
rand = "0.8.5"
regex = "1.6.0"
static_assertions = "1.1.0"
